include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook
 
DOC_MODULE = gedit
DOC_ENTITIES = 
DOC_INCLUDES = legal.xml
DOC_FIGURES = \
	figures/gedit_format_bold.png			\
	figures/gedit_format_italic.png			\
	figures/gedit_format_strikethrough.png		\
	figures/gedit_format_underline.png		\
	figures/gedit_recent_files_menu_icon.png	\
	figures/gedit_window.png	

DOC_LINGUAS = bg de es fr hu it ja ko oc ru sv uk zh_CN zh_HK zh_TW

# These languages aren't yet converted to gnome-doc-utils
SUBDIRS = eu ro
