include $(top_srcdir)/gnome-doc-utils.make

DOC_ID = gedit
DOC_FIGURES = \
	figures/gedit-icon.png \
	figures/gedit-new-external-tool.png \
	figures/gedit-open-location.png \
	figures/gedit-screenshot.png \
	figures/gedit-side-pane1.png \
	figures/gedit-side-pane2.png

DOC_PAGES = \
	gedit-change-color-scheme.page \
	gedit-edit-as-root.page \
	gedit-open-files-from-sidepane.page \
	gedit-open-on-server.page \
	gedit-open-recent.page \
	gedit-plugin-guide.page \
	gedit-plugins-bracket-comp.page \
	gedit-plugins-change-case.page \
	gedit-plugins-check-update.page \
	gedit-plugins-doc-stats.page \
	gedit-plugins-external-tools.page \
	gedit-plugins-file-browser.page \
	gedit-plugins-insert-date-time.page \
	gedit-plugins-install.page \
	gedit-plugins-modelines.page \
	gedit-plugins-pyconsole.page \
	gedit-plugins-quick-open \
	gedit-plugins-snippets.page \
	gedit-plugins-sort.page \
	gedit-plugins-spell-checker.page \
	gedit-plugins-tag-list.page \
	gedit-plugins-terminal.page \
	gedit-printing.page \
	gedit-quickstart.page \
	gedit-replace.page \
	gedit-shortcut-keys.page \
	gedit-spellcheck.page \
	gedit-syntax-highlighting.page \
	gedit-tabs.page \
	gedit-undo-recent-action.page \
	gedit-view-open-files-in-sidepane.page \
	index.page

DOC_LINGUAS =
dist-hook: doc-dist-hook

-include $(top_srcdir)/git.mk
