
appicondir = $(datadir)/pixmaps
appicon_DATA = gedit-icon.png

applogodir = $(datadir)/pixmaps
applogo_DATA = gedit-logo.png 		\
	gedit-plugin-manager.png 	\
	shell-output-logo.png
          

SOURCES = 				\
	gedit-icon.png 			\
	gedit-logo.png 			\
	gedit-plugin-manager.png 	\
	shell-output-logo.png


EXTRA_DIST = \
	$(appicon_DATA) \
	$(applogo_DATA)
